tweak symmetry and add websocket override

--- a/realtime.html
+++ b/realtime.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Audio Splatter</title>
+  </head>
   <body>
     <script>
       require('./realtime.js')
